[tool.poetry]
name = "nonebot-plugin-pixivbot-onebot-v11"
version = "1.1.0-alpha2-post1"
description = "Nonebot Plugin PixivBot (Onebot V11)"
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/ssttkkl/nonebot-plugin-pixivbot-onebot-v11"
packages = [
    { include = "nonebot_plugin_pixivbot_onebot_v11", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-beta.4"
nonebot-adapter-onebot = "^2.1.1"
nonebot-plugin-pixivbot = "~1.1.0-alpha.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
